@@ -1,0 +1,19 @@
+!>  \file libAF.f90  This file is currently used for documentation purposes only.
+!!  
+!!  \mainpage
+!!  libAF contains a variety of Fortran routines that I wrote for my own use, but that may also be useful for others.
+!<  
+
+!  Copyright 2002-2010 AstroFloyd - astrofloyd.org
+!   
+!  This file is part of the libAF package.
+!   
+!  This is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published
+!  by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.
+!  
+!  This software is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of
+!  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more details.
+!  
+!  You should have received a copy of the GNU General Public License along with this code.  If not, see 
+!  <http://www.gnu.org/licenses/>.
+
